--- a/InvenTree/locale/no/LC_MESSAGES/django.po
+++ b/InvenTree/locale/no/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-07-28 05:05+0000\n"
-"PO-Revision-Date: 2021-07-28 13:03\n"
+"PO-Revision-Date: 2021-07-28 14:00\n"
 "Last-Translator: \n"
 "Language-Team: Norwegian\n"
 "Language: no_NO\n"
@@ -19,19 +19,19 @@ msgstr ""
 
 #: InvenTree/api.py:64
 msgid "API endpoint not found"
-msgstr ""
+msgstr "API endepunkt ikke funnet"
 
 #: InvenTree/api.py:110
 msgid "No action specified"
-msgstr ""
+msgstr "Ingen handling spesifisert"
 
 #: InvenTree/api.py:124
 msgid "No matching action found"
-msgstr ""
+msgstr "Ingen samsvarende handling funnet"
 
 #: InvenTree/fields.py:100
 msgid "Enter date"
-msgstr ""
+msgstr "Oppgi dato"
 
 #: InvenTree/forms.py:111 build/forms.py:102 build/forms.py:123
 #: build/forms.py:145 build/forms.py:169 build/forms.py:185 build/forms.py:227
@@ -42,7 +42,7 @@ msgstr "Bekreft"
 
 #: InvenTree/forms.py:127
 msgid "Confirm delete"
-msgstr ""
+msgstr "Bekreft sletting"
 
 #: InvenTree/forms.py:128
 msgid "Confirm item deletion"
@@ -50,11 +50,11 @@ msgstr ""
 
 #: InvenTree/forms.py:160 templates/registration/login.html:76
 msgid "Enter password"
-msgstr "Skriv inn passord"
+msgstr "Oppgi passord"
 
 #: InvenTree/forms.py:161
 msgid "Enter new password"
-msgstr "Skriv inn nytt passord"
+msgstr "Oppgi nytt passord"
 
 #: InvenTree/forms.py:168
 msgid "Confirm password"
@@ -66,72 +66,72 @@ msgstr "Bekreft nytt passord"
 
 #: InvenTree/forms.py:201
 msgid "Select Category"
-msgstr ""
+msgstr "Velg kategori"
 
 #: InvenTree/helpers.py:396
 #, python-brace-format
 msgid "Duplicate serial: {n}"
-msgstr ""
+msgstr "Dupliser serie: {n}"
 
 #: InvenTree/helpers.py:403 order/models.py:315 order/models.py:425
 #: stock/views.py:1295
 msgid "Invalid quantity provided"
-msgstr ""
+msgstr "Ugyldig mengde oppgitt"
 
 #: InvenTree/helpers.py:406
 msgid "Empty serial number string"
-msgstr ""
+msgstr "Tom serienummerstreng"
 
 #: InvenTree/helpers.py:428 InvenTree/helpers.py:431 InvenTree/helpers.py:434
 #: InvenTree/helpers.py:459
 #, python-brace-format
 msgid "Invalid group: {g}"
-msgstr ""
+msgstr "Ugyldig gruppe: {g}"
 
 #: InvenTree/helpers.py:464
 #, python-brace-format
 msgid "Duplicate serial: {g}"
-msgstr ""
+msgstr "Dupliser serie: {g}"
 
 #: InvenTree/helpers.py:472
 msgid "No serial numbers found"
-msgstr ""
+msgstr "Ingen serienummer funnet"
 
 #: InvenTree/helpers.py:476
 #, python-brace-format
 msgid "Number of unique serial number ({s}) must match quantity ({q})"
-msgstr ""
+msgstr "Antall unike serienummer ({s}) må samsvare mengde ({q})"
 
 #: InvenTree/models.py:61 stock/models.py:1815
 msgid "Attachment"
-msgstr ""
+msgstr "Vedlegg"
 
 #: InvenTree/models.py:62
 msgid "Select file to attach"
-msgstr ""
+msgstr "Velg fil å legge ved"
 
 #: InvenTree/models.py:64 templates/js/attachment.js:52
 msgid "Comment"
-msgstr ""
+msgstr "Kommenter"
 
 #: InvenTree/models.py:64
 msgid "File comment"
-msgstr ""
+msgstr "Kommentar til fil"
 
 #: InvenTree/models.py:70 InvenTree/models.py:71 common/models.py:879
 #: common/models.py:880 part/models.py:2097
 #: report/templates/report/inventree_test_report_base.html:91
 #: templates/js/stock.js:1538
 msgid "User"
-msgstr ""
+msgstr "Bruker"
 
 #: InvenTree/models.py:74
 msgid "upload date"
-msgstr ""
+msgstr "opplastet dato"
 
 #: InvenTree/models.py:113
 msgid "Invalid choice"
-msgstr ""
+msgstr "Ugyldig valg"
 
 #: InvenTree/models.py:129 InvenTree/models.py:130 company/models.py:412
 #: label/models.py:112 part/models.py:718 part/models.py:2246
@@ -140,7 +140,7 @@ msgstr ""
 #: templates/js/part.js:206 templates/js/part.js:339 templates/js/part.js:831
 #: templates/js/stock.js:1331
 msgid "Name"
-msgstr ""
+msgstr "Navn"
 
 #: InvenTree/models.py:136 build/models.py:187
 #: build/templates/build/detail.html:24 company/models.py:351
@@ -161,11 +161,11 @@ msgstr ""
 #: templates/js/stock.js:917 templates/js/stock.js:1343
 #: templates/js/stock.js:1388
 msgid "Description"
-msgstr ""
+msgstr "Beskrivelse"
 
 #: InvenTree/models.py:137
 msgid "Description (optional)"
-msgstr ""
+msgstr "Beskrivelse (valgfritt)"
 
 #: InvenTree/models.py:145
 msgid "parent"
@@ -173,83 +173,83 @@ msgstr ""
 
 #: InvenTree/serializers.py:52 part/models.py:2482
 msgid "Must be a valid number"
-msgstr ""
+msgstr "Nummer må være gyldig"
 
 #: InvenTree/settings.py:505
 msgid "German"
-msgstr ""
+msgstr "Tysk"
 
 #: InvenTree/settings.py:506
 msgid "Greek"
-msgstr ""
+msgstr "Gresk"
 
 #: InvenTree/settings.py:507
 msgid "English"
-msgstr ""
+msgstr "Engelsk"
 
 #: InvenTree/settings.py:508
 msgid "Spanish"
-msgstr ""
+msgstr "Spansk"
 
 #: InvenTree/settings.py:509
 msgid "French"
-msgstr ""
+msgstr "Fransk"
 
 #: InvenTree/settings.py:510
 msgid "Hebrew"
-msgstr ""
+msgstr "Hebraisk"
 
 #: InvenTree/settings.py:511
 msgid "Italian"
-msgstr ""
+msgstr "Italiensk"
 
 #: InvenTree/settings.py:512
 msgid "Japanese"
-msgstr ""
+msgstr "Japansk"
 
 #: InvenTree/settings.py:513
 msgid "Korean"
-msgstr ""
+msgstr "Koreansk"
 
 #: InvenTree/settings.py:514
 msgid "Dutch"
-msgstr ""
+msgstr "Nederlandsk"
 
 #: InvenTree/settings.py:515
 msgid "Norwegian"
-msgstr ""
+msgstr "Norsk"
 
 #: InvenTree/settings.py:516
 msgid "Polish"
-msgstr ""
+msgstr "Polsk"
 
 #: InvenTree/settings.py:517
 msgid "Russian"
-msgstr ""
+msgstr "Russisk"
 
 #: InvenTree/settings.py:518
 msgid "Swedish"
-msgstr ""
+msgstr "Svensk"
 
 #: InvenTree/settings.py:519
 msgid "Thai"
-msgstr ""
+msgstr "Thailandsk"
 
 #: InvenTree/settings.py:520
 msgid "Turkish"
-msgstr ""
+msgstr "Tyrkisk"
 
 #: InvenTree/settings.py:521
 msgid "Vietnamese"
-msgstr ""
+msgstr "Vietnamesisk"
 
 #: InvenTree/settings.py:522
 msgid "Chinese"
-msgstr ""
+msgstr "Kinesisk"
 
 #: InvenTree/status.py:94
 msgid "Background worker check failed"
-msgstr ""
+msgstr "Bakgrunnsarbeiderkontroll mislyktes"
 
 #: InvenTree/status.py:98
 msgid "Email backend not configured"
@@ -454,7 +454,7 @@ msgstr ""
 
 #: barcodes/api.py:53 barcodes/api.py:150
 msgid "Must provide barcode_data parameter"
-msgstr ""
+msgstr "Må oppgi gyldig strekkode_data parameter"
 
 #: barcodes/api.py:126
 msgid "No match found for barcode data"
