--- a/InvenTree/locale/nl/LC_MESSAGES/django.po
+++ b/InvenTree/locale/nl/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-07-29 07:20+0000\n"
-"PO-Revision-Date: 2021-07-29 07:46\n"
+"PO-Revision-Date: 2021-07-30 08:42\n"
 "Last-Translator: \n"
 "Language-Team: Dutch\n"
 "Language: nl_NL\n"
@@ -23,50 +23,50 @@ msgstr ""
 
 #: InvenTree/api.py:110
 msgid "No action specified"
-msgstr ""
+msgstr "Geen actie gespecificeerd"
 
 #: InvenTree/api.py:124
 msgid "No matching action found"
-msgstr ""
+msgstr "Geen overeenkomende actie gevonden"
 
 #: InvenTree/fields.py:100
 msgid "Enter date"
-msgstr ""
+msgstr "Voer datum in"
 
 #: InvenTree/forms.py:111 build/forms.py:102 build/forms.py:123
 #: build/forms.py:145 build/forms.py:169 build/forms.py:185 build/forms.py:227
 #: order/forms.py:30 order/forms.py:41 order/forms.py:52 order/forms.py:63
 #: order/forms.py:74 part/forms.py:109 templates/js/translated/forms.js:526
 msgid "Confirm"
-msgstr ""
+msgstr "Bevestigen"
 
 #: InvenTree/forms.py:127
 msgid "Confirm delete"
-msgstr ""
+msgstr "Bevestigen verwijdering"
 
 #: InvenTree/forms.py:128
 msgid "Confirm item deletion"
-msgstr ""
+msgstr "Bevestig item verwijdering"
 
 #: InvenTree/forms.py:160 templates/registration/login.html:76
 msgid "Enter password"
-msgstr ""
+msgstr "Voer wachtwoord in"
 
 #: InvenTree/forms.py:161
 msgid "Enter new password"
-msgstr ""
+msgstr "Voer een nieuw wachtwoord in"
 
 #: InvenTree/forms.py:168
 msgid "Confirm password"
-msgstr ""
+msgstr "Wachtwoord bevestigen"
 
 #: InvenTree/forms.py:169
 msgid "Confirm new password"
-msgstr ""
+msgstr "Nieuw wachtwoord bevestigen"
 
 #: InvenTree/forms.py:201
 msgid "Select Category"
-msgstr ""
+msgstr "Categorie selecteren"
 
 #: InvenTree/helpers.py:396
 #, python-brace-format
@@ -76,7 +76,7 @@ msgstr ""
 #: InvenTree/helpers.py:403 order/models.py:315 order/models.py:425
 #: stock/views.py:1295
 msgid "Invalid quantity provided"
-msgstr ""
+msgstr "Ongeldige hoeveeldheid ingevoerd"
 
 #: InvenTree/helpers.py:406
 msgid "Empty serial number string"
@@ -86,7 +86,7 @@ msgstr ""
 #: InvenTree/helpers.py:459
 #, python-brace-format
 msgid "Invalid group: {g}"
-msgstr ""
+msgstr "Ongeldige groep: {g}"
 
 #: InvenTree/helpers.py:464
 #, python-brace-format
@@ -95,43 +95,43 @@ msgstr ""
 
 #: InvenTree/helpers.py:472
 msgid "No serial numbers found"
-msgstr ""
+msgstr "Geen serienummers gevonden"
 
 #: InvenTree/helpers.py:476
 #, python-brace-format
 msgid "Number of unique serial number ({s}) must match quantity ({q})"
-msgstr ""
+msgstr "Aantal unieke serienummer ({s}) moet overeenkomen met de hoeveelheid ({q})"
 
 #: InvenTree/models.py:61 stock/models.py:1815
 msgid "Attachment"
-msgstr ""
+msgstr "Bijlage"
 
 #: InvenTree/models.py:62
 msgid "Select file to attach"
-msgstr ""
+msgstr "Bestand als bijlage selecteren"
 
 #: InvenTree/models.py:64 templates/js/translated/attachment.js:52
 msgid "Comment"
-msgstr ""
+msgstr "Opmerking"
 
 #: InvenTree/models.py:64
 msgid "File comment"
-msgstr ""
+msgstr "Bijlage opmerking"
 
 #: InvenTree/models.py:70 InvenTree/models.py:71 common/models.py:952
 #: common/models.py:953 part/models.py:2097
 #: report/templates/report/inventree_test_report_base.html:91
 #: templates/js/translated/stock.js:1537
 msgid "User"
-msgstr ""
+msgstr "Gebruiker"
 
 #: InvenTree/models.py:74
 msgid "upload date"
-msgstr ""
+msgstr "uploaddatum"
 
 #: InvenTree/models.py:113
 msgid "Invalid choice"
-msgstr ""
+msgstr "Ongeldige keuze"
 
 #: InvenTree/models.py:129 InvenTree/models.py:130 company/models.py:412
 #: label/models.py:112 part/models.py:718 part/models.py:2246
@@ -140,7 +140,7 @@ msgstr ""
 #: templates/js/translated/part.js:206 templates/js/translated/part.js:339
 #: templates/js/translated/part.js:831 templates/js/translated/stock.js:1330
 msgid "Name"
-msgstr ""
+msgstr "Naam"
 
 #: InvenTree/models.py:136 build/models.py:187
 #: build/templates/build/detail.html:24 company/models.py:351
@@ -163,99 +163,99 @@ msgstr ""
 #: templates/js/translated/stock.js:914 templates/js/translated/stock.js:1342
 #: templates/js/translated/stock.js:1387
 msgid "Description"
-msgstr ""
+msgstr "Omschrijving"
 
 #: InvenTree/models.py:137
 msgid "Description (optional)"
-msgstr ""
+msgstr "Omschrijving (optioneel)"
 
 #: InvenTree/models.py:145
 msgid "parent"
-msgstr ""
+msgstr "overkoepelend"
 
 #: InvenTree/serializers.py:52 part/models.py:2482
 msgid "Must be a valid number"
-msgstr ""
+msgstr "Moet een geldig nummer zijn"
 
 #: InvenTree/settings.py:518
 msgid "German"
-msgstr ""
+msgstr "Duits"
 
 #: InvenTree/settings.py:519
 msgid "Greek"
-msgstr ""
+msgstr "Grieks"
 
 #: InvenTree/settings.py:520
 msgid "English"
-msgstr ""
+msgstr "Engels"
 
 #: InvenTree/settings.py:521
 msgid "Spanish"
-msgstr ""
+msgstr "Spaans"
 
 #: InvenTree/settings.py:522
 msgid "French"
-msgstr ""
+msgstr "Frans"
 
 #: InvenTree/settings.py:523
 msgid "Hebrew"
-msgstr ""
+msgstr "Hebreeuws"
 
 #: InvenTree/settings.py:524
 msgid "Italian"
-msgstr ""
+msgstr "Italiaans"
 
 #: InvenTree/settings.py:525
 msgid "Japanese"
-msgstr ""
+msgstr "Japans"
 
 #: InvenTree/settings.py:526
 msgid "Korean"
-msgstr ""
+msgstr "Koreaans"
 
 #: InvenTree/settings.py:527
 msgid "Dutch"
-msgstr ""
+msgstr "Nederlands"
 
 #: InvenTree/settings.py:528
 msgid "Norwegian"
-msgstr ""
+msgstr "Noors"
 
 #: InvenTree/settings.py:529
 msgid "Polish"
-msgstr ""
+msgstr "Pools"
 
 #: InvenTree/settings.py:530
 msgid "Russian"
-msgstr ""
+msgstr "Russisch"
 
 #: InvenTree/settings.py:531
 msgid "Swedish"
-msgstr ""
+msgstr "Zweeds"
 
 #: InvenTree/settings.py:532
 msgid "Thai"
-msgstr ""
+msgstr "Thais"
 
 #: InvenTree/settings.py:533
 msgid "Turkish"
-msgstr ""
+msgstr "Turks"
 
 #: InvenTree/settings.py:534
 msgid "Vietnamese"
-msgstr ""
+msgstr "Vietnamees"
 
 #: InvenTree/settings.py:535
 msgid "Chinese"
-msgstr ""
+msgstr "Chinees"
 
 #: InvenTree/status.py:94
 msgid "Background worker check failed"
-msgstr ""
+msgstr "Achtergrondwerker check is gefaald"
 
 #: InvenTree/status.py:98
 msgid "Email backend not configured"
-msgstr ""
+msgstr "E-mailbackend niet geconfigureerd"
 
 #: InvenTree/status.py:101
 msgid "InvenTree system health checks failed"
@@ -452,39 +452,39 @@ msgstr ""
 
 #: InvenTree/views.py:897 templates/navbar.html:95
 msgid "System Information"
-msgstr ""
+msgstr "Systeeminformatie"
 
 #: barcodes/api.py:53 barcodes/api.py:150
 msgid "Must provide barcode_data parameter"
-msgstr ""
+msgstr "De paramenter barcode_data moet worden aangeleverd"
 
 #: barcodes/api.py:126
 msgid "No match found for barcode data"
-msgstr ""
+msgstr "Geen overeenkomst gevonden voor barcode gegevens"
 
 #: barcodes/api.py:128
 msgid "Match found for barcode data"
-msgstr ""
+msgstr "Overeenkomst gevonden voor barcode gegevens"
 
 #: barcodes/api.py:153
 msgid "Must provide stockitem parameter"
-msgstr ""
+msgstr "Moet voorraaditem parameter aanleveren"
 
 #: barcodes/api.py:160
 msgid "No matching stock item found"
-msgstr ""
+msgstr "Geen overeenkomend voorraaditem gevonden"
 
 #: barcodes/api.py:190
 msgid "Barcode already matches StockItem object"
-msgstr ""
+msgstr "Barcode komt al overeen met StockItem object"
 
 #: barcodes/api.py:194
 msgid "Barcode already matches StockLocation object"
-msgstr ""
+msgstr "Barcode komt al overeen met StockLocation object"
 
 #: barcodes/api.py:198
 msgid "Barcode already matches Part object"
-msgstr ""
+msgstr "Barcode komt al overeen met Part object"
 
 #: barcodes/api.py:204 barcodes/api.py:216
 msgid "Barcode hash already matches StockItem object"
